src/styles/modules/Projects.module.css
.projects__container {
  display: flex;
  flex-direction: column;
}

.card {
  margin-bottom: 2rem;
  background-color: var(--color-white);
  padding: var(--size-padding);
  box-shadow: var(--box-shadow);
  border-radius: var(--border-radius);

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.card:last-child {
  margin-bottom: 0;
}

.card__img {
  width: 100%;

  box-shadow: var(--box-shadow);
  border-radius: var(--border-radius);
}

.card__info {
  display: flex;
  flex-direction: column;
}

.card__title {
  margin: 0 0 0.75em 0;
  font-size: 1.5rem;
}

.card__title::after {
  content: '';
  display: block;
  height: 0.15em;
  width: 10rem;
  background-color: var(--color-primary);
  border-radius: 0.25rem;
}

.card .card__desc {
  margin: 0 0 0.75em 0;
  color: var(--color-secondary);
  font-weight: 500;
}

.card__tech-stacks {
  margin-bottom: 2em;
  display: flex;
  flex-direction: row;
  gap: 0.5em;
  flex-wrap: wrap;
}

.card__tech-stack {
  padding: 0.25em 0.5em;
  border-radius: 0.25rem;
  background-color: var(--color-secondary);
  color: var(--color-white);
  font-size: 0.75rem;
  font-weight: 500;
}

.card__links {
  display: flex;
  flex-direction: row;
  gap: 0.75em;
}

.card__link {
  position: relative;
  transform: 0;

  padding: 0.5em 1em;
  border-radius: 0.25rem;
  background-color: var(--color-primary);
  color: var(--color-white);

  text-decoration: none;
  font-weight: 500;

  display: flex;
  align-items: center;
  gap: 0.5em;

  transition: transform 0.2s ease-in-out;
}

.card__link:hover {
  transform: translateY(-0.25em);
}

.card__link__icon {
  font-size: 1.125em;
}

@media (min-width: 800px) {
  .card {
    align-items: center;
  }

  .card:nth-child(odd) {
    flex-direction: row-reverse;
  }

  .card:nth-child(even) {
    flex-direction: row;
  }

  .card__img {
    flex: 4;
  }

  .card__info {
    flex: 3;
  }
}

